Update to bootstrap 4.5 fix navbar bug on small screen

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -58,6 +58,19 @@ main {
   -moz-box-shadow: -10px 10px 0px 0px $color_blue;
 }
 
+.navbar .show, .navbar .collapsing {
+  text-align: center !important;
+}
+
+.navbar-toggler {
+  text-align: right;
+  color: $color_blue;
+  .navbar-toggler-icon {
+    color: $color_blue;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%2851, 51, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")
+  }
+}
+
 footer {
   a {
     color: $color_white;
